@@ -443,12 +443,9 @@ Numeric procedures:
 .BR angle ,
 .BR asin ,
 .BR atan ,
-.BR ceiling ,
 .BR complex? ,
-.BR cos ,
 .BR denominator ,
 .BR exp ,
-.BR floor ,
 .BR imag-part ,
 .BR log ,
 .BR magnitude ,
@@ -457,12 +454,7 @@ Numeric procedures:
 .BR numerator ,
 .BR rational ,
 .BR rationalize ,
-.BR real-part ,
-.BR round ,
-.BR sin ,
-.BR sqrt,
-.BR tan ,
-.BR truncate .
+.BR real-part .
 .SH "BUGS
 Nested quasiquotation is currently unsupported.
 .SH "FILES
