@@ -580,6 +580,7 @@
 (test (integer->char 122) #\z)
 (test (integer->char 10) #\newline)
 (test (integer->char 32) #\space)
+(test (integer->char 65.0) #\A)
 
 (test (list->string '(#\S #\t #\r #\i #\n #\g)) "String")
 (test (list->string '()) "")
@@ -1582,6 +1583,32 @@
 (test (abs 0.0) 0.0)
 (test (abs -0.0) 0.0)
 
+(test (ceiling  0.0) 0.0)
+(test (ceiling  1.0) 1.0)
+(test (ceiling -1.0) -1.0)
+(test (ceiling  1.1) 2.0)
+(test (ceiling  1.4) 2.0)
+(test (ceiling  1.5) 2.0)
+(test (ceiling  1.9) 2.0)
+(test (ceiling -1.1) -1.0)
+(test (ceiling -1.4) -1.0)
+(test (ceiling -1.5) -1.0)
+(test (ceiling -1.9) -1.0)
+
+(test (cos    0.0) 1.0)
+(test (cos   90.0) 0.0)
+(test (cos  180.0) -1.0)
+(test (cos  270.0) 0.0)
+(test (cos  360.0) 1.0)
+(test (cos  -90.0) 0.0)
+(test (cos -180.0) -1.0)
+(test (cos -270.0) 0.0)
+(test (<  0.9998476950 (cos   1)  0.9998476959) #t)
+(test (<  0.7071067810 (cos  45)  0.7071067819) #t)
+(test (< -0.7071067819 (cos 135) -0.7071067810) #t)
+(test (< -0.7071067819 (cos 225) -0.7071067810) #t)
+(test (<  0.7071067810 (cos 315)  0.7071067819) #t)
+
 (test (even? -1) #f)
 (test (even? 0) #t)
 (test (even? 1) #f)
@@ -1656,6 +1683,7 @@
 (test (expt -2 3) -8)
 (test (expt -2 4) 16)
 (test (expt 2 100) 1267650600228229401496703205376)
+(test (expt 2.0 2.0) 4.0)
 
 (test (expt 0. 2) 0)
 (test (expt 2.0 0) 1.0)
@@ -1679,6 +1707,18 @@
 (test (expt 10   -10) 1.0e-10)
 (test (expt 10  -100) 1.0e-100)
 (test (expt 10 -1000) 1.0e-1000)
+
+(test (floor  0.0) 0.0)
+(test (floor  1.0) 1.0)
+(test (floor -1.0) -1.0)
+(test (floor  1.1) 1.0)
+(test (floor  1.4) 1.0)
+(test (floor  1.5) 1.0)
+(test (floor  1.9) 1.0)
+(test (floor -1.1) -2.0)
+(test (floor -1.4) -2.0)
+(test (floor -1.5) -2.0)
+(test (floor -1.9) -2.0)
 
 (test (gcd) 0)
 (test (gcd 17) 17)
@@ -1850,6 +1890,32 @@
 (test (remainder -12345  12345) 0)
 (test (remainder -12345 -12345) 0)
 
+(test (round  0.0) 0.0)
+(test (round  1.0) 1.0)
+(test (round -1.0) -1.0)
+(test (round  1.1) 1.0)
+(test (round  1.4) 1.0)
+(test (round  1.5) 2.0)
+(test (round  1.9) 2.0)
+(test (round -1.1) -1.0)
+(test (round -1.4) -1.0)
+(test (round -1.5) -2.0)
+(test (round -1.9) -2.0)
+
+(test (sin    0.0) 0.0)
+(test (sin   90.0) 1.0)
+(test (sin  180.0) 0.0)
+(test (sin  270.0) -1.0)
+(test (sin  360.0) 0.0)
+(test (sin  -90.0) -1.0)
+(test (sin -180.0) 0.0)
+(test (sin -270.0) 1.0)
+(test (<  0.0174524060 (sin   1)  0.0174524069) #t)
+(test (<  0.7071067810 (sin  45)  0.7071067819) #t)
+(test (<  0.7071067810 (sin 135)  0.7071067819) #t)
+(test (< -0.7071067819 (sin 225) -0.7071067810) #t)
+(test (< -0.7071067819 (sin 315) -0.7071067810) #t)
+
 (test (sqrt 0) 0)
 (test (sqrt 1) 1)
 (test (sqrt 144) 12)
@@ -1859,6 +1925,34 @@
 (test (< 11.090536500 (sqrt 123) 11.090536509) #t)
 (test (sqrt 15239.9025) 123.45)
 (test (sqrt 1e20) 1e10)
+
+(test (tan    0.0) 0.0)
+(test (tan   45.0) 1.0)
+(test (tan  135.0) -1.0)
+(test (tan  225.0) 1.0)
+(test (tan  315.0) -1.0)
+(test (tan  360.0) 0.0)
+(test (tan  -45.0) -1.0)
+(test (tan -135.0) 1.0)
+(test (tan -225.0) -1.0)
+(test (tan -315.0) 1.0)
+(test (<  0.0174550640 (tan   1)  0.0174550650) #t)
+(test (<  0.4142135620 (tan  22.5)  0.4142135629) #t)
+(test (< -0.4142135629 (tan 157.5) -0.4142135620) #t)
+(test (<  0.4142135620 (tan 202.5)  0.4142135629) #t)
+(test (< -0.4142135629 (tan 337.5) -0.4142135620) #t)
+
+(test (truncate  0.0) 0.0)
+(test (truncate  1.0) 1.0)
+(test (truncate -1.0) -1.0)
+(test (truncate  1.1) 1.0)
+(test (truncate  1.4) 1.0)
+(test (truncate  1.5) 1.0)
+(test (truncate  1.9) 1.0)
+(test (truncate -1.1) -1.0)
+(test (truncate -1.4) -1.0)
+(test (truncate -1.5) -1.0)
+(test (truncate -1.9) -1.0)
 
 (test (zero? -1) #f)
 (test (zero?  0) #t)
@@ -2160,6 +2254,11 @@
 (define (string-downcase s)
   (apply string (map char-downcase (string->list s))))
 
+(test (make-string 0) "")
+(test (make-string 1) " ")
+(test (make-string 3 #\x) "xxx")
+(test (make-string 2.0 #\x) "xx")
+
 (test (number->string 0) "0")
 (test (number->string 123) "123")
 (test (number->string 165 2) "10100101")
@@ -2311,11 +2410,13 @@
 (test (string-ref "abc" 0) #\a)
 (test (string-ref "abc" 1) #\b)
 (test (string-ref "abc" 2) #\c)
+(test (string-ref "abc" 1.0) #\b)
 
 (define s (string #\1 #\2 #\3))
 (test (begin (string-set! s 0 #\a) s) "a23")
 (test (begin (string-set! s 2 #\c) s) "a2c")
 (test (begin (string-set! s 1 #\b) s) "abc")
+(test (begin (string-set! s 1.0 #\space) s) "a c")
 
 (test (string<? "test" "test") #f)
 (test (string<? "test" "tesa") #f)
@@ -2404,8 +2505,14 @@
 (test (substring "abc" 2 2) "")
 (test (substring "abc" 2 3) "c")
 (test (substring "abc" 3 3) "")
+(test (substring "abc" 0.0 3.0) "abc")
 
 ; --- vectors ---
+
+(test (make-vector 0) #())
+(test (make-vector 1) #(#f))
+(test (make-vector 3 'x) #(x x x))
+(test (make-vector 2.0 'x) #(x x))
 
 (test (vector) '#())
 (test (vector 'x) '#(x))
@@ -2424,11 +2531,13 @@
 (test (vector-ref #(a b c) 0) 'a)
 (test (vector-ref #(a b c) 1) 'b)
 (test (vector-ref #(a b c) 2) 'c)
+(test (vector-ref #(a b c) 2.0) 'c)
 
 (define v (vector 1 2 3))
 (test (begin (vector-set! v 0 'a) v) '#(a 2 3))
 (test (begin (vector-set! v 2 'c) v) '#(a 2 c))
 (test (begin (vector-set! v 1 'b) v) '#(a b c))
+(test (begin (vector-set! v 1.0 'x) v) '#(a x c))
 
 ; --- I/O ---
 
@@ -2491,6 +2600,11 @@
                         '(12345678901234567890 12345678901234567890))
 (test (visibility-check -12345678901234567890)
                         '(-12345678901234567890 -12345678901234567890))
+(test (visibility-check 1.0) '(1.0 1.0))
+(test (visibility-check 12345.6789e+10) '(12345.6789e+10 12345.6789e+10))
+(test (visibility-check -12345.6789e+10) '(-12345.6789e+10 -12345.6789e+10))
+(test (visibility-check 12345.6789e-10) '(12345.6789e-10 12345.6789e-10))
+(test (visibility-check -12345.6789e-10) '(-12345.6789e-10 -12345.6789e-10))
 (test (visibility-check #\A) '(#\A a))
 (test (visibility-check "x y") '("x y" x))
 (test (visibility-check 'foo) '(foo foo))
